@@ -44,6 +44,9 @@ New features
 - R's own printing of warnings if now transformed to warnings of type
   `rinterface.RRuntimeWarning` (it used to be a regular `UserWarning`)
 
+- The family of functions `src_*` in the R package `dplyr` have aliases
+  in the module :mod:`rpy2.robjects.lib.dplyr`.
+  
 Changes
 -------
 
